Fix an overflow display problem
https://trello.com/c/slv6VXlM/591-bug-affichage-de-lien-%C3%A0-raccourcir

--- a/src/static/css/_custom.scss
+++ b/src/static/css/_custom.scss
@@ -693,6 +693,10 @@ article#aid {
         @extend .row;
         @extend .mt-5;
 
+        overflow-wrap: break-word;
+        word-wrap: break-word;
+        hyphens: auto;
+
         footer {
             @extend .mt-5;
             @extend .col-md-8;
